# loadwhat

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: COM_Plan.md  architecture.md  clippy_fix_summary.md  code_review_findings.md  codex_handoff_prompt_repo_aligned.md  com_docker_and_open_issues_plan.md  com_feature_analysis.md  com_testing_strategy.md  diagrams.md  loadwhat_ai_agent_spec.md  loadwhat_code_map_updated.md  loadwhat_spec_v1.md  loadwhat_spec_v2.md  loadwhat_specs_for_codex_current.md  loadwhat_specs_for_codex_reconciliation.md  loadwhat_v2_x86_plan.md  manual_spotcheck_test_plan.md  roadmap.md  test_coverage_gaps.md  test_implementation_plan.md  testing.md  windows_docker_container_setup.md
docs/_docfix/: roadmap_template.md  testing_template.md
src/: cli.rs  debug_run.rs  emit.rs  loader_snaps.rs  main.rs  pe.rs  search.rs  test_util.rs  win.rs
src/com/: fs.rs  manifest.rs  mod.rs  registry.rs  resolver.rs
tests/: integration.rs
tests/harness/: assert.rs  case.rs  fixture.rs  mod.rs  paths.rs  pe_builder.rs  run_loadwhat.rs  win_path.rs
tests/integration/: architecture_cleanup.rs  cli_validation_edge_cases.rs  com_cli_contract.rs  dynamic_all_later_loaded.rs  dynamic_loader_snaps_contract.rs  dynamic_loadlibrary_fullpath.rs  dynamic_loadlibrary_name.rs  dynamic_missing_direct.rs  dynamic_multiple_candidates.rs  dynamic_nested_loadlibrary.rs  imports_bad_image.rs  imports_edge_cases.rs  imports_on_dll.rs  imports_stability.rs  (+25 more)
(+29 files in other folders)
